--- a/src/template/index.gohtml
+++ b/src/template/index.gohtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <!-- Add any CSS files or stylesheets here -->
-    <link rel="stylesheet" href="/static/styles.css">
+    <!-- <link rel="stylesheet" href="/static/styles.css"> -->
 </head>
 <body>
     <header>
@@ -20,11 +20,10 @@
 
     <footer>
         <!-- Footer content goes here -->
-        <p>&copy; 2024 Sophia Hoffmann Fernandes Braga</p>
     </footer>
     
     <!-- Add any JavaScript files or scripts here -->
-    <script src="/static/scripts.js"></script>
+    <!-- <script src="/static/scripts.js"></script> -->
 </body>
 </html>
 
